# code-review

./: README.md
docs/: vue-review-agent-design.md  vue-review-agent-plan.md
vue-review-agent/: .env.example  .gitignore  debug_stream.py  main.py  models.py  pyproject.toml
vue-review-agent/.chromadb/: chroma.sqlite3
vue-review-agent/agents/: graph.py  reviewers.py  sfc_parser.py  state.py  synthesis.py
vue-review-agent/rag/: indexer.py  retriever.py
vue-review-agent/rag/vue_docs/: components..md  performance.md  reactivity.md  style_guide.md
vue-review-agent/tests/: conftest.py  test_api.py  test_reviewers.py  test_sfc_parser.py
vue-review-agent/tests/fixtures/: bad_component.vue  good_component.vue
vue-review-agent/vue_review_agent.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
